<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="active_sessions">Active Sessions</string>
    <string name="app_name">Unisong</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_invite_friend">Invite Friend</string>
    <string name="action_leave_session">Leave Session</string>
    <string name="action_see_friend_requests">Friend Requests</string>
    <string name="session_members">Session Members</string>

    <string name="artist">Artists</string>
    <string name="album">Albums</string>
    <string name="songs">Songs</string>
    <string name="playlist">Playlists</string>
    <string name="genre">Genres</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="register_facebook">Register with Facebook</string>

    <string name="phone_number">Phone Number</string>

    <string name="action_add_friend">Add Friend</string>
    <string name="action_log_out">Log Out</string>

    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="add_song">Add Song</string>
    <string name="facebook_app_id">1649733165294953</string>

    <string name="register">Register</string>

    <string name="next">Next</string>
    <string name="title_activity_music_playing">MusicPlaying</string>

    <string name="add_friend_label">Add Friend</string>
    <string name="friends_label">Friends</string>

    <string name="leave">Leave</string>
    <string name="join">Join</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="change_profile_picture">Change profile picture?</string>

    <string-array name="music_player_tabs">
        <item>PLAYLISTS</item>
        <item>ARTISTS</item>
        <item>ALBUMS</item>
        <item>SONGS</item>
        <item>GENRES</item>
    </string-array>

    <string-array name="add_friend_options">
        <item>By Username</item>
        <item>From Contacts</item>
    </string-array>

    <string-array name="unisong_session_tab_names">
        <item>MEMBERS</item>
        <item>SONGS</item>
    </string-array>
    
    <string-array name = "drawer_text">
        <item>Friends</item>
        <item>Log Out</item>
    </string-array>

    <string-array name = "drawer_icons">
        <item>gmd-group</item>
        <item>gmd-power-settings-new</item>
    </string-array>

    <string name="kick_message">Would you like to kick USER_NAME?</string>
    <string name="kick">Kick</string>
    <string name="kicked_message">You have been kicked out of the session</string>
    <string name="sorry">Sorry</string>

    <string name="add_friend_contacts">Add Friend From Contacts</string>
    <string name="add_friend_facebook">Add Friend From Label</string>
    <string name="add_friend_by_username">Add Friend By Username</string>

    <string name="choose">Choose</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_text">Please enter the verification code sent to your phone number.</string>
    <string name="empty"/>


    <string name="rest_api_version">1.0.0</string>

    <string name="need_update">Unisong requires an update!</string>

    <string name="log_out_message">Would you like to log out?</string>
    <string name="friend_requests_message">You have XXXX friend requests, would you like to see them?</string>
    <string name="leave_session_message">Would you like to leave the session?</string>
    <string name="join_session_message">Would you like to join USER_NAME\'s session?</string>
    <string name="end_session_message">The session has been ended.</string>
    <string name="add_friend_contacts_message">Would you like to add friends from your contacts?</string>

    <string name="no_thanks">No Thanks</string>
    <string name="yes">Yes</string>

    <string name="from_facebook">From Facebook</string>
    <string name="from_contacts">From Contacts</string>
    <string name="friend_requests_label">Friend Requests</string>

    <string name="add_friend_failed">Failed to add friend</string>
    <string name="add_friend_succeeded">Friend added!</string>
    <string name="deny_friend_failed">Failed to deny friend request</string>
    <string name="deny_friend_succeeded">Friend request denied!</string>

    <string name="resync">Resync</string>
    <string name="wrong_code">Wrong Code!</string>
    <string name="name">Name</string>
</resources>
