<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:speakersync="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        speakersync:showAsAction="ifRoom"
        speakersync:actionViewClass="android.support.v7.widget.SearchView"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        speakersync:showAsAction="never"  />

    <item android:id="@+id/action_add_friend"
        android:title="@string/action_add_friend"
        android:orderInCategory="100"
        speakersync:showAsAction="never"  />

    <item android:id="@+id/action_log_out"
        android:title="@string/action_log_out"
        android:orderInCategory="100"
        speakersync:showAsAction="never"  />

</menu>