<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/login_bar"
        layout="@layout/login_bar">

    </include>

    <com.iangclifton.android.floatlabel.FloatLabel
        android:layout_below="@id/login_bar"
        android:textColorHint="@color/secondaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerUsername"
        android:hint="@string/username"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout="@layout/custom_float_label"/>

    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/registerPassword"
        android:textColorHint="@color/secondaryText"
        android:layout_below="@+id/registerUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout="@layout/custom_float_label"/>

    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/registerPasswordVerify"
        android:textColorHint="@color/secondaryText"
        android:layout_below="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password_confirm"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout="@layout/custom_float_label"/>

    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/registerPhoneNumber"
        android:textColorHint="@color/secondaryText"
        android:layout_below="@+id/registerPasswordVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout="@layout/custom_float_label"/>

    <Button
        android:background="@drawable/button_border"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="@color/primaryText"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/register"
        android:onClick="register"
        android:layout_centerHorizontal="true"
        android:id="@+id/register_button"
        style="?android:attr/borderlessButtonStyle" />


</RelativeLayout>