<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:floatlabel="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/alogin_bar"
        layout="@layout/login_bar">

    </include>

    <com.iangclifton.android.floatlabel.FloatLabel
        android:layout_below="@id/alogin_bar"
        android:textColorHint="@color/secondaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/aloginUsername"
        android:hint="@string/username"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout="@layout/custom_float_label"/>

    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/aloginPassword"
        android:textColorHint="@color/secondaryText"
        android:layout_below="@+id/aloginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout="@layout/custom_float_label"/>

    <Button
        android:layout_below="@id/aloginPassword"
        android:background="@drawable/button_border"
        android:layout_marginLeft="@dimen/login_button_margin"
        android:layout_marginRight="@dimen/login_button_margin"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="@color/primaryText"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/log_in"
        android:layout_centerHorizontal="true"
        android:id="@+id/alogin_button"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:background="@drawable/button_border"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/login_button_margin"
        android:layout_marginRight="@dimen/login_button_margin"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="@color/primaryText"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:id="@+id/a_register_button"
        style="?android:attr/borderlessButtonStyle" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="@dimen/login_button_margin"
        android:layout_marginRight="@dimen/login_button_margin"
        android:layout_above="@id/a_register_button"/>


</RelativeLayout>